@@ -37,8 +37,13 @@ def from_address(text):
     @rtype: dns.name.Name object
     """
     try:
-        parts = list(dns.ipv6.inet_aton(text).encode('hex_codec'))
-        origin = ipv6_reverse_domain
+        v6 = dns.ipv6.inet_aton(text)
+        if dns.ipv6.is_mapped(v6):
+            parts = ['%d' % ord(byte) for byte in v6[12:]]
+            origin = ipv4_reverse_domain
+        else:
+            parts = list(v6.encode('hex_codec'))
+            origin = ipv6_reverse_domain
     except:
         parts = ['%d' % ord(byte) for byte in dns.ipv4.inet_aton(text)]
         origin = ipv4_reverse_domain
